[package]
name = "hive-asar"
description = "Asynchronous parser and writer for Electron's asar archive format."
version = "0.2.0"
repository = "https://github.com/hack3ric/hive-asar"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fs", "integrity"]
fs = ["tokio/fs"]
integrity = ["sha2"]

[dependencies]
async-trait = "0.1"
hex = { version = "0.4.3", features = ["serde"] }
pin-project = "1.0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10.2", optional = true }
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
