[package]
name = "hive-asar"
description = "Asynchronous parser and writer for Electron's asar archive format."
version = "0.4.0"
repository = "https://github.com/hack3ric/hive-asar"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fs", "integrity", "stream"]
fs = ["tokio/fs"]
integrity = ["sha2"]
stream = ["bytes", "futures-core", "futures-util", "tokio-util"]

[dependencies]
async-trait = "0.1"
bytes = { version = "1.1.0", optional = true }
futures-core = { version = "0.3.21", optional = true }
futures-util = { version = "0.3.21", optional = true }
hex = { version = "0.4.3", features = ["serde"] }
libc = "0.2.126"
pin-project = "1.0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10.2", optional = true }
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7.3", features = ["io"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
